--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="user_name_hint">Username</string>
     <string name="confirm_pass_hint">Confirm Password</string>
     <string name="logout">LOGOUT</string>
+    <string name="cancel">Cancel</string>
+    <string name="from_device">from device</string>
+    <string name="camera">camera</string>
 </resources>
